--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   </nav>
   <div class="container-md">
     <h3>Device List</h3>
-    <a href="all_csv.zip">Download all CSVs</a>
-    <a href="all_raw_logs.zip">Download all raw logs</a>
+    <a href="all_data.zip">Download all CSV & JSON data</a>
+    <a href="all_rawlogs.zip">Download all raw logs</a>
     <table class="table table-striped-columns">
       <thead>
         <tr>
