--- a/device.html
+++ b/device.html
@@ -8,9 +8,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-  <nav class="navbar bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">SigCap Buddy Data</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <span class="navbar-text" id="lastupdate-text"></span>
+      </div>
     </div>
   </nav>
   <div class="container-md">
@@ -153,6 +159,15 @@
       document.getElementById("device-id").innerHTML = deviceId;
       document.getElementById("dl-csv").href = `data_${deviceId}.zip`;
       document.getElementById("dl-log").href = `rawlogs_${deviceId}.zip`;
+
+      fetch(`last_update.json`)
+        .then(function (response) {
+          return response.json();
+        })
+        .then(function (data) {
+          const div = document.querySelector("#lastupdate-text");
+          div.innerHTML = `Last update: ${new Date(data.last_update)}`
+        })
 
       fetch(`throughput_${deviceId}.json`)
         .then(function (response) {
