--- a/device.html
+++ b/device.html
@@ -15,6 +15,23 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="#dl-tput-plot-label">DL Tput</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#ul-tput-plot-label">UL Tput</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#latency-plot-label">Latency</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#wifi-rssi-plot-label">Wi-Fi RSSI</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#heartbeat-label">Heartbeats</a>
+          </li>
+        </ul>
         <span class="navbar-text" id="lastupdate-text"></span>
       </div>
     </div>
@@ -59,7 +76,7 @@
     <div id="latency-ulload-boxplot-speedtest-wlan0"></div>
     <h4 id="wifi-rssi-plot-label" style="display: none">Connected Wi-Fi RSSI</h4>
     <div id="wifi-rssi-plot"></div>
-    <h4>Heartbeats</h4>
+    <h4 id="heartbeat-label">Heartbeats</h4>
     <table class="table table-striped-columns">
       <thead>
         <tr>
