--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
     // Hardcoded dict
     const deviceDict = {
       "8E-51-F9-59-3F-8D": "UChicago Pi",
+      "D8-3A-DD-4C-C4-E9": "UChicago Pi (eth0 only)",
+      "D8-3A-DD-4C-C4-9E": "Chi Verizon FWB",
       "D8-3A-DD-41-AA-94": "Prof. Ghosh's friend Pi",
       "D8-3A-DD-4C-C5-19": "Prof. Ghosh's Chi Pi",
       "D8-3A-DD-4C-C5-CE": "Prof. Ghosh's SB Pi",
