Added Chi Google Fiber Webpass label, data filtering for certain devices.

--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
     // Hardcoded dict
     const deviceDict = {
       "8E-51-F9-59-3F-8D": "UChicago Pi",
-      "D8-3A-DD-4C-C4-E9": "UChicago Pi (eth0 only)",
+      "D8-3A-DD-41-AA-94": "Chi HiPoint",
       "D8-3A-DD-4C-C4-9E": "Chi Verizon FWB",
-      "D8-3A-DD-41-AA-94": "Prof. Ghosh's friend Pi",
+      "D8-3A-DD-4C-C4-E9": "UChicago Pi (eth0 only)",
       "D8-3A-DD-4C-C5-19": "Prof. Ghosh's Chi Pi",
+      "D8-3A-DD-4C-C5-B5": "Chi Google Fiber Webpass",
       "D8-3A-DD-4C-C5-CE": "Prof. Ghosh's SB Pi",
       "DC-A6-32-1D-A4-E0": "Prof. Striegel's Pi"
     }
