Shorten download labels.

--- a/device.html
+++ b/device.html
@@ -68,16 +68,16 @@
         <div id="latency-idle-boxplot-speedtest-eth0-collapse" class="accordion-collapse collapse" aria-labelledby="latency-idle-boxplot-speedtest-eth0-label">
           <div class="accordion-body">
             <ul>
-              <li><a id="dl-heartbeat-csv">Download Heartbeat CSV</a></li>
-              <li><a id="dl-heartbeat-json">Download Heartbeat JSON</a></li>
-              <li><a id="dl-latency-csv">Download Latency CSV</a></li>
-              <li><a id="dl-latency-json">Download Latency JSON</a></li>
-              <li><a id="dl-throughput-csv">Download Throughput CSV</a></li>
-              <li><a id="dl-throughput-json">Download Throughput JSON</a></li>
-              <li><a id="dl-wifi-scan-csv">Download Wi-Fi Scan CSV</a></li>
-              <li><a id="dl-wifi-scan-json">Download Wi-Fi Scan JSON</a></li>
-              <li><a id="dl-csv">Download all CSV & JSON data</a></li>
-              <li><a id="dl-log">Download raw logs</a></li>
+              <li><a id="dl-heartbeat-csv">Heartbeat CSV</a></li>
+              <li><a id="dl-heartbeat-json">Heartbeat JSON</a></li>
+              <li><a id="dl-latency-csv">Latency CSV</a></li>
+              <li><a id="dl-latency-json">Latency JSON</a></li>
+              <li><a id="dl-throughput-csv">Throughput CSV</a></li>
+              <li><a id="dl-throughput-json">Throughput JSON</a></li>
+              <li><a id="dl-wifi-scan-csv">Wi-Fi Scan CSV</a></li>
+              <li><a id="dl-wifi-scan-json">Wi-Fi Scan JSON</a></li>
+              <li><a id="dl-csv">All CSV & JSON data</a></li>
+              <li><a id="dl-log">Raw logs</a></li>
             </ul>
           </div>
         </div>
